--- a/docs/PWDFT_docs.tex
+++ b/docs/PWDFT_docs.tex
@@ -99,37 +99,19 @@ energy.
 
 \input{Atoms}
 
-
 \input{PWGrid}
 
+\input{Electrons}
 
-\section{Electronic states}
-
-
-\section{Potentials and energies}
-
+\input{PotentialsEnergies}
 
 \input{Pseudopotential}
 
+\input{Hamiltonian}
 
-\section{Hamiltonian operators}
+\input{SCF}
 
-
-\section{Iterative diagonalization of Hamiltonian}
-
-
-\section{Calculation of electron density and total energy}
-
-
-\section{Self-consistent field}
-
-Mixing etc
-
-Density vs potential mix
-
-
-\section{Direct minimization}
-
+\input{DirectMin}
 
 \appendix
 \section{Howtos}
