--- a/docs/PWGrid.tex
+++ b/docs/PWGrid.tex
@@ -126,7 +126,10 @@ There are two mandatory arguments: \jlinline{ecutwfc} and \jlinline{LatVecs}.
 \jlinline{LatVecs} is usually correspond to the one used in an
 instance of \jlinline{Atoms}.
 
+Structure factor
+
 FFT
 
-
 operators op nabla op nabla 2
+
+\input{images/KPoints_struct}
