--- a/docs/Pseudopotential.tex
+++ b/docs/Pseudopotential.tex
@@ -50,6 +50,8 @@ where $x=G r_{\mathrm{loc}}$.
 
 \subsection{Nonlocal pseudopotential}
 
+\input{images/PsPotNL_struct}
+
 The nonlocal component of GTH pseudopotential can written in real space as
 \begin{equation}
 V^{\mathrm{PS}}_{l}(\mathbf{r}-\mathbf{R}_{I},\mathbf{r}'-\mathbf{R}_{I}) =
