--- a/docs/images/GVectors_struct.tex
+++ b/docs/images/GVectors_struct.tex
@@ -18,4 +18,4 @@ end
 \node[fancytitle, right=10pt] at (box.north west) {\jlinline{GVectors} struct definition};
 \end{tikzpicture}
 \caption{Definition of \jlinline{GVectors}.}
-\end{figure}1
+\end{figure}
