--- a/docs/images/KPoints_struct.tex
+++ b/docs/images/KPoints_struct.tex
@@ -1,21 +1,6 @@
-\documentclass{article}
-\usepackage{tikz}
-\usetikzlibrary{shapes.geometric}
-
-\tikzstyle{mybox} = [draw=blue, fill=green!5, very thick, rectangle,
-  rounded corners, inner sep=10pt, inner ysep=20pt]
-
-\tikzstyle{fancytitle} = [fill=blue, text=white]
-
-\usepackage{minted}
-\newcommand{\jlinline}[1]{\mintinline{julia}{#1}}
-
-\begin{document}
-
-\thispagestyle{empty}
-
+\begin{figure}[H]
+\centering
 \begin{tikzpicture}
-
 \node[mybox] (box) {%
 \begin{minipage}{0.6\textwidth}%
 \begin{minted}{julia}
@@ -29,9 +14,7 @@ end
 \end{minted}
 \end{minipage}
 };
-
-\node[fancytitle, right=10pt] at (box.north west) {\jlinline{GVectors} struct definition};
-
+\node[fancytitle, right=10pt] at (box.north west) {\jlinline{KPoints} struct definition};
 \end{tikzpicture}
-
-\end{document}
+\caption{Definition of \jlinline{KPoints}.}
+\end{figure}
