--- a/docs/Pseudopotential.tex
+++ b/docs/Pseudopotential.tex
@@ -20,6 +20,8 @@ V^{\mathrm{PS}}_{l}(\mathbf{r}-\mathrm{R}_{I},\mathbf{r}'-\mathbf{R}_{I})
 \right]
 \end{equation}
 
+\input{images/PsPot_GTH_struct}
+
 \subsection{Local pseudopotential}
 
 The local pseudopotential for
