--- a/docs/BIBLIO.bib
+++ b/docs/BIBLIO.bib
@@ -29,6 +29,11 @@
   howpublished = {\url{https://github.com/atztogo/spglib}},
 }
 
+@misc{Libxc.jl,
+  title = {Libxc.jl},
+  howpublished = {\url{https://github.com/unkcpz/Libxc.jl}}
+}
+
 @UNPUBLISHED{Regier2016,
   author = {Jeffrey Regier and Kiran Pamnany and Ryan Giordano and
             Rollin C. Thomas and David Schlegel and Jon McAuliffe and
@@ -352,4 +357,3 @@
   doi = {DOI: 10.1016/j.cpc.2009.07.007},
   keywords = {First-principles calculation},
 }
-
