--- a/docs/PWDFT_docs.tex
+++ b/docs/PWDFT_docs.tex
@@ -31,9 +31,10 @@
 
 \definecolor{mintedbg}{rgb}{0.90,0.90,0.90}
 \usepackage{mdframed}
-\BeforeBeginEnvironment{minted}{\begin{mdframed}[backgroundcolor=mintedbg,%
-  rightline=false,leftline=false,topline=false,bottomline=false]}
-\AfterEndEnvironment{minted}{\end{mdframed}}
+
+%\BeforeBeginEnvironment{minted}{\begin{mdframed}[backgroundcolor=mintedbg,%
+%  rightline=false,leftline=false,topline=false,bottomline=false]}
+%\AfterEndEnvironment{minted}{\end{mdframed}}
 
 
 \usepackage{tikz}
